--- a/pom.xml
+++ b/pom.xml
@@ -36,11 +36,6 @@
   		<version>5.0.9.RELEASE</version>
   	</dependency>
   	<dependency>
-  		<groupId>ojdbc</groupId>
-  		<artifactId>ojdbc</artifactId>
-  		<version>6</version>
-  	</dependency>
-  	<dependency>
   		<groupId>commons-dbcp</groupId>
   		<artifactId>commons-dbcp</artifactId>
   		<version>1.4</version>
@@ -115,6 +110,11 @@
   		<artifactId>javax.mail</artifactId>
   		<version>1.6.2</version>
   	</dependency>
+  			<dependency>
+			<groupId>javax.servlet</groupId>
+			<artifactId>javax.servlet-api</artifactId>
+			<version>3.1.0</version>
+		</dependency>
   	<dependency>
   		<groupId>joda-time</groupId>
   		<artifactId>joda-time</artifactId>
@@ -134,6 +134,11 @@
   		<groupId>org.springframework.data</groupId>
   		<artifactId>spring-data-mongodb</artifactId>
   		<version>2.1.0.RELEASE</version>
+  	</dependency>
+  	<dependency>
+  		<groupId>ojdbc</groupId>
+  		<artifactId>ojdbc</artifactId>
+  		<version>6</version>
   	</dependency>
   </dependencies>
   <packaging>war</packaging>
