--- a/pom.xml
+++ b/pom.xml
@@ -140,6 +140,12 @@
   		<artifactId>ojdbc</artifactId>
   		<version>6</version>
   	</dependency>
+  	<!-- https://mvnrepository.com/artifact/commons-codec/commons-codec -->
+	<dependency>
+	    <groupId>commons-codec</groupId>
+	    <artifactId>commons-codec</artifactId>
+	    <version>1.10</version>
+	</dependency>
   </dependencies>
   <packaging>war</packaging>
 </project>
