--- a/pom.xml
+++ b/pom.xml
@@ -140,6 +140,11 @@
   		<artifactId>ojdbc</artifactId>
   		<version>6</version>
   	</dependency>
+  	<dependency>
+  		<groupId>org.jsoup</groupId>
+  		<artifactId>jsoup</artifactId>
+  		<version>1.11.3</version>
+  	</dependency>
   </dependencies>
   <packaging>war</packaging>
 </project>
